--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ td {
     height: 133px;
     border: 5px solid grey;
     position: relative;
+    cursor: pointer;
+}
+
+td:hover {
+    background-color: #fffcbd53
 }
 
 tr:first-child td {
@@ -35,6 +40,10 @@ tr td:last-child {
     height: 100px;
     top: 20px;
     bottom: 20px;
-    right: 10px;
-    left: 10px;
+    right: 15px;
+    left: 15px;
+}
+
+.d-none {
+    display: none;
 }
