--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.player-panel {
+    display: flex;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    gap: 50px;
+    margin-bottom: 60px;
+}
+
+.player-panel img {
+    width: 50px;
+    height: 50px;
+    padding-right: 12px;
+    padding-left: 12px;
+}
+
+.player-one {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.player-inactive {
+    opacity: 0.5;
+}
+
 table {
     border-collapse: collapse;
 }
