--- a/style.css
+++ b/style.css
@@ -87,3 +87,19 @@ tr td:last-child {
 .d-none {
     display: none;
 }
+
+.horizontal-line {
+    height: 10px;
+    width: 362px;
+    background-color: rgba(0, 128, 0, 0.445);
+    position: absolute;
+    transform: scaleX(0.0);
+    transform: scaleY(0.0);
+    transition: transform 225ms ease-in-out;
+}
+
+.make-vertical {
+    transform: rotate(90deg);
+    transform: scaleX(0.0);
+    transition: transform 225ms ease-in-out;
+}
