--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: black;
 }
 
 .player-panel {
     display: flex;
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
     gap: 50px;
     margin-bottom: 60px;
 }
@@ -53,7 +55,7 @@ tr {
 td {
     width: 133px;
     height: 133px;
-    border: 5px solid grey;
+    border: 5px solid rgba(255, 255, 255, 0.703);
     position: relative;
     cursor: pointer;
 }
@@ -96,6 +98,54 @@ tr td:last-child {
     height: 10px;
     width: 362px;
     position: absolute;
-    background-color: rgba(0, 128, 0, 0.445);
+    background-color: rgba(5, 255, 109, 0.897);
     transition: transform 225ms ease-in-out;
 }
+
+.gameover {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    height: 640px;
+    z-index: 2;
+    animation: zoomIn 225ms ease-in-out;
+}
+
+.gameover-button {
+    color: white;
+    padding: 12px;
+    background-color: rgb(0, 174, 186);
+    background-image: linear-gradient(315deg, #47319e 0%, #1e6a9d 74%);
+    border: solid 2px rgb(208, 236, 254);
+    border-radius: 5px;
+    font-size: 20px;
+    z-index: 3;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+    animation: zoomIn 225ms ease-in-out;
+}
+
+.gameover-button:hover {
+    box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
+}
+
+.gameover-button:focus {
+    outline: none;
+  }
+
+@keyframes zoomIn {
+    from {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
